0.19.0
 - feat: share dialog for collections and datasets
 - fix: remember ETag of uploaded resources (#80)
 - fix: create a new group if when no group available to add datasets to
 - fix: cache download resource file size
 - fix: action button behavior in downloads panel (#94)
 - enh: allow sharing individual datasets instead of collections (#32)
 - enh: add preview option for dataset description in upload dialog (#52)
 - enh: introduce write lock for eternal job updates
 - enh: new icon and splash image artwork
 - ref: move `FilterChainMyData` to module `panel_my_data`
0.18.2
 - ref: make action buttons in filter view hideable
0.18.2
 - ci: fix build pipeline (innosetup missing in win 2025 image)
0.18.1
 - ci: fix build pipeline (innosetup missing in win 2025 image)
0.18.0
 - feat: implement local database for caching (partially #5)
 - fix: missing .rtdc resource files in filter view
 - fix: error handling when connection to server fails on download (#75)
 - fix: '_condensed' suffix for file stem randomly missing in downloads
 - fix: finalize/ephermalize job when upload finishes when widget not visible
 - fix: race condition in `DownloadJob.get_status`
 - enh: display DCOR instance title in search bar
 - enh: increase up/download panel refresh rate to 2 Hz
 - enh: initialize up/download panel with final column widths
 - enh: add tool tip with full resource and dataset name in up/download panel
 - enh: make icons "grayer" so they work in dark themes as well
 - enh: add `SQLiteKeyJSONDatabase` for persistent metadata storage
 - enh: add `MetaCache` for persistent metadata management
 - enh: add `CKANAPI.hostname`
 - enh: sort search results by creation date instead of score and modified date
 - enh: convenience kwarg `since_time` for `search_dataset_via_api`
 - enh: implement `DBExtract.__repr__`
 - enh: remove unused "Sharing" page
 - enh: add icon for "Find Data"
 - enh: cache CKANAPI instance in GUI