@@ -4,6 +4,7 @@
  - fix: create a new group if when no group available to add datasets to
  - fix: cache download resource file size
  - fix: action button behavior in downloads panel (#94)
+ - fix: action button behavior in uploads panel
  - enh: allow sharing individual datasets instead of collections (#32)
  - enh: add preview option for dataset description in upload dialog (#52)
  - enh: introduce write lock for eternal job updates
